# WarCompany-CRYENGINE

./: README.md  WarCompany.cryproject
Assets/levels/: battletest.level.cryasset
Assets/levels/battletest/: ai_test_basicnav.level.cryasset  battletest.level  battletest.level.bak  battletest.level.bak2  filelist.xml
Assets/levels/battletest/AI_Test_BasicNav/: AI_Test_BasicNav.cry.bak  AI_Test_BasicNav.level  filelist.xml  level.pak  shadercache.editor_data
Assets/levels/battletest/layers/: main.lyr  main.lyr.bak  main.lyr.bak2  terrain.lyr  terrain.lyr.bak  terrain.lyr.bak2
Assets/levels/battletest/leveldata/: objectives.xml
Assets/libs/environmentpresets/: example.env.cryasset
Assets/scripts/AI/: Navigation.xml
Code/: CMakeLists.txt  GamePlugin.cpp  GamePlugin.h
Code/BattleFormation/: AnchorPoint.cpp  AnchorPoint.h  BattleFormation.cpp  BattleFormation.h  BattleFormationColumn.h  BattleFormationComponent.h  BattleLineSlot.cpp  BattleLineSlot.h  BattleLineSpline.cpp  BattleLineSpline.h  BlockFormation.cpp  BlockFormation.h  DebugBattleFormation.cpp  DebugBattleFormation.h  FormationColumn.cpp  FormationColumn.h  FormationSlot.cpp  FormationSlot.h  IBattleFormation.h  IBattleFormationColumn.h  IFormationColumn.h  IFormationSlot.h  IFormationUnit.h  ISplineControlPoint.h  VertexPoint.cpp  VertexPoint.h
Code/BattleFormation/FormationBuilder/: FormationBuildGroup.cpp  FormationBuildGroup.h  FormationBuilder.cpp  FormationBuilder.h
Code/BattleFormation/FormationSpline/: AnchorPoint.cpp  AnchorPoint.h  BattleLineSpline.cpp  BattleLineSpline.h  BattleLineSplineComponent.cpp  BattleLineSplineComponent.h  CurveLine.cpp  CurveLine.h  CurveProperties.h  DebugBattleLineSpline.cpp  DebugBattleLineSpline.h  IAnchorPoint.h  IBattleLineSpline.h  ICurveLine.h  ICurveProperties.h  ICurveSegment.h  ISplinePoint.h  IVertexPoint.h  VertexPoint.cpp  VertexPoint.h
Code/CompanyUnit/: CompanyClassModel.h  CompanyUnit.cpp  CompanyUnit.h
Code/CompanyUnit/TroopCompany/: TroopCompany.cpp  TroopCompany.h  TroopCompanyClass.cpp  TroopCompanyClass.h  TroopUnit.h
Code/CompanyUnit/WeaponAttachments/: ITroopWeaponAttachment.h  WeaponAttachment.cpp
Code/Components/: Player.cpp  Player.h  StdComponent.cpp  StdComponent.h
Code/TroopUnitSystem/: ITroopUnitSystem.h  TroopUnitSystem.cpp  TroopUnitSystem.h
Code/TroopUnitSystem/TroopCompany/: ITroopCompany.h  ITroopCompanyClass.h  TroopCompany.cpp  TroopCompany.h  TroopCompanyClass.cpp  TroopCompanyClass.h
Code/TroopUnitSystem/TroopUnit/: ITroopUnit.h  ITroopUnitBasicTypes.h  ITroopUnitClass.h  TroopUnit.cpp  TroopUnit.h  TroopUnitClass.cpp  TroopUnitClass.h
Code/TroopUnitSystem/WeaponAttachments/: WeaponAttachment.h
War Company/: Game.cryproject
War Company/Assets/libs/environmentpresets/: example.env.cryasset
War Company/Code/: CMakeLists.txt
War Company/Code/BattleFormation/: BattleFormation.h  BattleFormationSlot.h
War Company/Code/BattleFormation/BattleLineSpline/: AnchorPoint.h  BattleLineSlot.h  BattleLineSpline.cpp  BattleLineSpline.h  DormantPoint.h  IControlPoint.h  VertexPoint.cpp  VertexPoint.h
War Company/solutions/win64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Code_uber.cpp  Components_uber.cpp  Editor.vcxproj  Game.sln  Game.vcxproj  Game.vcxproj.filters  GameLauncher.vcxproj  GameServer.vcxproj  GameServer.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
War Company/solutions/win64/CRYENGINE/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CRYENGINE_Win64.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
War Company/user/sandbox/: assets.json
War Company/user/shaders/cache/d3d11/cgpshaders/: illum@common_zpassps  illum@illuminationps
solutions/win64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BattleFormation_uber.cpp  CMakeCache.txt  Code_uber.cpp  CompanyUnitSystem_uber.cpp  CompanyUnits_uber.cpp  Components_uber.cpp  Editor.vcxproj  GameLauncher.vcxproj  GameServer.vcxproj  GameServer.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  TroopUnitSystem_uber.cpp  WarCompany.autogen.rc  WarCompany.sln  WarCompany.vcxproj  WarCompany.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
solutions/win64/CRYENGINE/: ALL_BUILD.vcxproj  CRYENGINE_Win64.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters
solutions/win64/Editor.dir/Profile/: Editor.lib.recipe
solutions/win64/Profile/: WarCompany.exp  WarCompany.lib
solutions/win64/WarCompany.dir/Profile/: WarCompany.autogen.res  WarCompany.dll.recipe
user/sandbox/: Personalization.json  assets.json  lastloadpath.preset
user/shaders/: shadercachemisses.txt
